# DAA-Final

./: .gitignore  clang.native
conference/: solution.cpp
onecountry/: brute.cpp  draw.py  meson.build  solution.cpp  solution.py  test.py  test.sh  test2.py  test3.py
report/: .gitignore  conference.tex  onecountry.tex  report.tex  souptime.tex
soaptime/: meson.build  solution.cpp  solution.py  test.sh
